feat [schedule]: full complete schedule
